# MAVSDK

./: .gitmodules
.github/workflows/: main.yml
examples/autopilot_server/: CMakeLists.txt  autopilot_only.cpp  autopilot_server.cpp
examples/takeoff_and_land/: takeoff_and_land.cpp
src/: CMakeLists.txt
src/cmake/: unit_tests.cmake
src/integration_tests/: CMakeLists.txt  camera_take_photo.cpp
src/mavsdk/: CMakeLists.txt
src/mavsdk/core/: CMakeLists.txt  lazy_server_plugin.h  mavlink_command_receiver.cpp  mavlink_command_receiver.h  mavlink_include.h.in  mavlink_mission_transfer.cpp  mavlink_mission_transfer.h  mavlink_mission_transfer_test.cpp  mavlink_parameters.cpp  mavlink_parameters.h  mavlink_request_message_handler.cpp  mavlink_request_message_handler.h  mavsdk_impl.cpp  mavsdk_impl.h  server_component.cpp  server_component.h  server_component_impl.cpp  server_component_impl.h  server_plugin_impl_base.cpp  server_plugin_impl_base.h  system_impl.cpp  system_impl.h
src/mavsdk/core/mocks/: sender_mock.h
src/mavsdk/plugins/: CMakeLists.txt
src/mavsdk/plugins/action/: action_impl.cpp
src/mavsdk/plugins/action_server/: action_server.cpp  (+2 more)
src/mavsdk/plugins/info_server/: CMakeLists.txt  info_server.cpp  info_server_impl.cpp  info_server_impl.h
src/mavsdk/plugins/info_server/include/plugins/info_server/: info_server.h
src/system_tests/: action_arm_disarm.cpp  camera_take_photo.cpp  system_tests_helper.cpp
templates/plugin_cpp/: file.j2
templates/plugin_h/: file.j2
templates/plugin_impl_cpp/: file.j2
templates/plugin_impl_h/: file.j2
(+33 files in other folders)
